fix spacing of banking section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ nav .fas {
 }
 
 #banking {
-    padding-left: 20px;
+    padding-top: 20px;
 }
 
 .food {
